// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Text Processors > Text Align Processor > should process font style correctly > font-style 1`] = `
"// Generated SCSS Variables
$text-primary: #bfc5c6;
$size-16: 1rem;
$font-style-italic: italic;
$font-weight-normal: normal;
$font-weight-medium: 31.25rem;

// Generated SCSS Mixins
@mixin font-style-italics-variable {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: $size-16;
  font-weight: 400;
  font-style: $font-style-italic;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
@mixin font-style-italics-custom {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: 1rem;
  font-weight: 400;
  font-style: italic;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
@mixin font-weight-string-variable {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: $size-16;
  font-weight: 400;
  font-style: $font-weight-normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
@mixin font-weight-string-custom {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
@mixin font-weight-numerical-variable {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Roboto;
  font-size: $size-16;
  font-weight: $font-weight-medium;
  font-style: normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
"
`;

exports[`Text Processors > Text Align Processor > should process font style correctly > font-style 2`] = `
"// Generated SCSS Variables
$text-primary: #bfc5c6;
$size-16: 1rem;
$font-style-italic: italic;
$font-weight-normal: normal;
$font-weight-medium: 31.25rem;

// Generated SCSS Mixins
@mixin font-style-italics-variable {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: $size-16;
  font-weight: 400;
  font-style: $font-style-italic;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
@mixin font-style-italics-custom {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: 1rem;
  font-weight: 400;
  font-style: italic;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
@mixin font-weight-string-variable {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: $size-16;
  font-weight: 400;
  font-style: $font-weight-normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
@mixin font-weight-string-custom {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
@mixin font-weight-numerical-variable {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Roboto;
  font-size: $size-16;
  font-weight: $font-weight-medium;
  font-style: normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
"
`;

exports[`Text Processors > Text Align Processor > should process paragraph alignment correctly > paragraph-alignment 1`] = `
"// Generated SCSS Variables
$text-primary: #bfc5c6;
$size-16: 1rem;

// Generated SCSS Mixins
@mixin frame--top {
  padding: 0rem;
  background: #ffffff;
}
@mixin frame--top-paragraph-alignment-top {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: $size-16;
  font-weight: 400;
  font-style: normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
@mixin autolayout--top {
  display: flex;
  flex-direction: column;
  gap: 0.625rem;
  padding: 0rem 1.875rem;
  background: #ffffff;
  justify-content: center;
}
@mixin autolayout--top-paragraph-alignment-top {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: $size-16;
  font-weight: 400;
  font-style: normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
@mixin paragraph-alignment-top {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: $size-16;
  font-weight: 400;
  font-style: normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
@mixin frame--middle {
  padding: 0rem;
  background: #ffffff;
}
@mixin frame--middle-paragraph-alignment-center {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: $size-16;
  font-weight: 400;
  font-style: normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
@mixin autolayout--middle {
  display: flex;
  flex-direction: column;
  gap: 0.625rem;
  padding: 0rem 1.875rem;
  background: #ffffff;
  justify-content: center;
}
@mixin autolayout--middle-paragraph-alignment-center {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: $size-16;
  font-weight: 400;
  font-style: normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
@mixin paragraph-alignment-center {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: $size-16;
  font-weight: 400;
  font-style: normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
@mixin frame--bottom {
  padding: 0rem;
  background: #ffffff;
}
@mixin frame--bottom-paragraph-alignment-bottom {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: $size-16;
  font-weight: 400;
  font-style: normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
@mixin autolayout--bottom {
  display: flex;
  flex-direction: column;
  gap: 0.625rem;
  padding: 0rem 1.875rem;
  background: #ffffff;
  justify-content: center;
}
@mixin autolayout--bottom-paragraph-alignment-bottom {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: $size-16;
  font-weight: 400;
  font-style: normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
@mixin paragraph-alignment-bottom {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: $size-16;
  font-weight: 400;
  font-style: normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
"
`;

exports[`Text Processors > Text Align Processor > should process paragraph alignment correctly > paragraph-alignment 2`] = `
"// Generated SCSS Variables
$text-primary: #bfc5c6;
$size-16: 1rem;

// Generated SCSS Mixins
@mixin frame--top {
  padding: 0rem;
  background: #ffffff;
}
@mixin frame--top-paragraph-alignment-top {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: $size-16;
  font-weight: 400;
  font-style: normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
@mixin autolayout--top {
  display: flex;
  flex-direction: column;
  gap: 0.625rem;
  padding: 0rem 1.875rem;
  background: #ffffff;
  justify-content: center;
}
@mixin autolayout--top-paragraph-alignment-top {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: $size-16;
  font-weight: 400;
  font-style: normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
@mixin paragraph-alignment-top {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: $size-16;
  font-weight: 400;
  font-style: normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
@mixin frame--middle {
  padding: 0rem;
  background: #ffffff;
}
@mixin frame--middle-paragraph-alignment-center {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: $size-16;
  font-weight: 400;
  font-style: normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
@mixin autolayout--middle {
  display: flex;
  flex-direction: column;
  gap: 0.625rem;
  padding: 0rem 1.875rem;
  background: #ffffff;
  justify-content: center;
}
@mixin autolayout--middle-paragraph-alignment-center {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: $size-16;
  font-weight: 400;
  font-style: normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
@mixin paragraph-alignment-center {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: $size-16;
  font-weight: 400;
  font-style: normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
@mixin frame--bottom {
  padding: 0rem;
  background: #ffffff;
}
@mixin frame--bottom-paragraph-alignment-bottom {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: $size-16;
  font-weight: 400;
  font-style: normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
@mixin autolayout--bottom {
  display: flex;
  flex-direction: column;
  gap: 0.625rem;
  padding: 0rem 1.875rem;
  background: #ffffff;
  justify-content: center;
}
@mixin autolayout--bottom-paragraph-alignment-bottom {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: $size-16;
  font-weight: 400;
  font-style: normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
@mixin paragraph-alignment-bottom {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: $size-16;
  font-weight: 400;
  font-style: normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
"
`;

exports[`Text Processors > Text Align Processor > should process text alignment correctly > text-alignment 1`] = `
"// Generated SCSS Variables
$text-primary: #bfc5c6;
$size-16: 1rem;

// Generated SCSS Mixins
@mixin paragraph-justification-justify {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
@mixin paragraph-justification-right {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
@mixin paragraph-justification-center {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: $size-16;
  font-weight: 400;
  font-style: normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
@mixin paragraph-justification-left {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: $size-16;
  font-weight: 400;
  font-style: normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
"
`;

exports[`Text Processors > Text Align Processor > should process text alignment correctly > text-alignment 2`] = `
"// Generated SCSS Variables
$text-primary: #bfc5c6;
$size-16: 1rem;

// Generated SCSS Mixins
@mixin paragraph-justification-justify {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
@mixin paragraph-justification-right {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: 1rem;
  font-weight: 400;
  font-style: normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
@mixin paragraph-justification-center {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: $size-16;
  font-weight: 400;
  font-style: normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
@mixin paragraph-justification-left {
  display: flex;
  flex-direction: column;
  color: $text-primary;
  font-family: Inter;
  font-size: $size-16;
  font-weight: 400;
  font-style: normal;
  line-height: normal;
  width: 6.25rem;
  height: 1.25rem;
}
"
`;
